--- a/app/frontend/admin/html/admin_login.html
+++ b/app/frontend/admin/html/admin_login.html
@@ -11,6 +11,24 @@
 <body>
   <!-- 상단 헤더 -->
   <header class="site-header">
+  <!-- 마스코트 기차 (그룹) -->
+  <div class="mascot-train">
+    <!-- 보노보노 - 구르는 효과 -->
+    <div class="mascot-item rolling-mascot">
+      <img src="/app/frontend/admin/image/rolling_mascot.png" alt="보노보노" />
+    </div>
+    
+    <!-- 포로리 - 걷는 효과 -->
+    <div class="mascot-item walking-mascot-1">
+      <img src="/app/frontend/admin/image/squirrel.png" alt="포로리" />
+    </div>
+    
+    <!-- 너부리 - 걷는 효과 -->
+    <div class="mascot-item walking-mascot-2">
+      <img src="/app/frontend/admin/image/raccoon.png" alt="너부리" />
+    </div>
+  </div>
+
     <div class="brand">
       <h1>채용공고만 하는 사이트</h1>
       <p class="subtitle">We don't wanna you</p>
@@ -77,4 +95,5 @@
   <!-- JS -->
   <script src="/app/frontend/admin/js/admin_login.js"></script>
 </body>
+
 </html>
