--- a/app/frontend/admin/html/admin_index.html
+++ b/app/frontend/admin/html/admin_index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8" />
   <title>관리자 대시보드</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- 공용 사용자 스타일 + 관리자 전용 -->
-  <link rel="stylesheet" href="/app/frontend/admin/css/style.css" />
+  <!-- 관리자 전용 -->
   <link rel="stylesheet" href="/app/frontend/admin/css/admin.css" />
 </head>
 <body>
@@ -260,3 +259,4 @@
 </body>
 
 </html>
+
